Fixed layout issue

--- a/unimeet/src/App.css
+++ b/unimeet/src/App.css
@@ -45,5 +45,5 @@
   align-content:center;
   border: solid black 5px;
   height:400px;
-  width: 400px
+  width: 100%;
 }
